Revert "Format codes"
This reverts commit c20fa79b07f3b37ba65d5e2793ae0cf99cdc1b49.